force-app/main/default/objects/Legal_Document__c/fields/Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Filed__c</fullName>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>