force-app/main/default/objects/Legal_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Papers</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Case Plan</fullName>
            </value>
            <value>
                <fullName>Child Support Agreement</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Custody Agreement</fullName>
            </value>
            <value>
                <fullName>Financial Records</fullName>
            </value>
            <value>
                <fullName>Foster Care Agreement</fullName>
            </value>
            <value>
                <fullName>Incident Report</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Parenting Plan</fullName>
            </value>
            <value>
                <fullName>Parental Consent</fullName>
            </value>
            <value>
                <fullName>Police Report</fullName>
            </value>
            <value>
                <fullName>Psychological Evaluation</fullName>
            </value>
            <value>
                <fullName>School Records</fullName>
            </value>
            <value>
                <fullName>Social Worker Report</fullName>
            </value>
            <value>
                <fullName>Safety Plan</fullName>
            </value>
            <value>
                <fullName>Termination of Parental Rights</fullName>
            </value>
            <value>
                <fullName>Visitation Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>