force-app/main/default/objects/Legal_Document__c/fields/Document_Upload__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload__c</fullName>
    <label>Document Upload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>