force-app/main/default/objects/Legal_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Date_Filed__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Document_Upload__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>